--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.1.4"
+    "@astrojs/tailwind": "^3.1.1",
+    "@fontsource/nunito": "^4.5.12",
+    "astro": "^2.1.4",
+    "tailwindcss": "^3.2.7"
+  },
+  "volta": {
+    "node": "18.15.0"
   }
 }
