--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.1",
+    "@astrojs/vercel": "^3.2.1",
     "@fontsource/nunito": "^4.5.12",
-    "astro": "^2.1.4",
+    "astro": "^2.1.5",
     "tailwindcss": "^3.2.7"
   },
   "volta": {
