--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.16.1",
     "@astrojs/tailwind": "^3.1.1",
     "@astrojs/vercel": "^3.2.1",
     "@fontsource/nunito": "^4.5.12",
     "astro": "^2.1.5",
+    "sharp": "^0.31.3",
     "tailwindcss": "^3.2.7"
   },
   "volta": {
