--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.2.1",
     "@astrojs/image": "^0.16.1",
     "@astrojs/tailwind": "^3.1.1",
     "@astrojs/vercel": "^3.2.1",
     "@fontsource/nunito": "^4.5.12",
+    "@types/alpinejs": "^3.7.1",
+    "alpinejs": "^3.12.0",
     "astro": "^2.1.5",
     "sharp": "^0.31.3",
     "tailwindcss": "^3.2.7"
